--- a/EntendAI.ipynb
+++ b/EntendAI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/Nz3CKqQ9T4Gl848GjRkl",
+      "authorship_tag": "ABX9TyNSRqGSrZFTOW+JOURTTMjH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "id": "7w76bPAib0kB"
       },
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "Iekdeu1bgylz"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "dGIeDfDVh8i4"
       },
-      "execution_count": 50,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -155,6 +155,9 @@
       "cell_type": "code",
       "source": [
         "# Função auxiliar para exibir texto formatado em Markdown no Colab\n",
+        "from IPython.display import HTML, Markdown, display\n",
+        "import textwrap\n",
+        "\n",
         "def to_markdown(text):\n",
         "  text = text.replace('•', '  *')\n",
         "  return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))"
@@ -162,7 +165,7 @@
       "metadata": {
         "id": "L8ROQ0iBm6jT"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -215,7 +218,7 @@
         "    opcao = input(\"Digite o número da sua escolha: \")\n",
         "\n",
         "    if opcao == '1':\n",
-        "      estado = input(\"Digite o estado onde será usada a palavra ou expressão regional: \")\n",
+        "      estado = input(\"Digite a região (estado brasileiro): \")\n",
         "      termo = input(\"Digite a palavra ou expressão regional: \")\n",
         "      lingua_destino = input(\"Digite a língua para tradução: \")\n",
         "      resultado = traduzir_regional(termo, estado, lingua_destino)\n",
@@ -236,18 +239,18 @@
         "        print(\"\\n O que deseja fazer agora?\\n\")\n",
         "\n",
         "    elif opcao == '2':\n",
-        "      geracao_origem = input(\"Digite a geração de origem (Z, X, Y, Baby Boomers): \")\n",
+        "      geracao_origem = input(\"Digite a geração de origem (Alpha, Z, X, Y, Baby Boomers): \")\n",
         "      termo = input(\"Digite a palavra ou expressão: \")\n",
-        "      geracao_destino = input(\"Digite a geração de destino (Z, X, Y, Baby Boomers): \")\n",
+        "      geracao_destino = input(\"Digite a geração de destino (Alpha, X, Y, Baby Boomers): \")\n",
         "      resultado = explicar_geracao(termo, geracao_origem, geracao_destino)\n",
         "      display(to_markdown(f\"Explicação para a Geração {geracao_destino}: {resultado}\"))\n",
         "\n",
         "    elif opcao == '3':\n",
-        "      print(\"\\nObrigado por usar o EntendAI!\")\n",
+        "      print(\"\\n Obrigado por usar o EntendAI!\")\n",
         "      break\n",
         "\n",
         "    else:\n",
-        "      print(\"\\nOpção inválida. Por favor, tente novamente.\")\n",
+        "      print(\"\\n Opção inválida. Por favor, tente novamente.\")\n",
         "\n",
         "main()"
       ],
